[package]
name = "stellar-peerinfo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stellar-peerinfo"
path = "src/main.rs"

[dependencies]
stellar-overlay = { path = "../stellar-overlay" }
stellar-xdr = { version = "25", features = ["std", "curr"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
